# ugk

./: .gitignore  CONTRIBUTING.md  GLOSSARY.json  GLOSSARY.md  IMPLEMENTATION_CODEX.md  INTEGRITY_BASIS.md  INVARIANT_TAXONOMY.json  INVARIANT_TAXONOMY.md  LICENSE  Makefile  README.md  RELEASE.txt  ROADMAP_G6.md  SECURITY.md  SKILL.md  UGK_SCAVENGE_INTEGRATION_ROADMAP.md  VERIFIER_BOUNDARY.md  codex_gen.py  docs_index_gen.py  glossary_gen.py  invariant_taxonomy_gen.py  make_release.sh  pyproject.toml  readme_gen.py  verify_deep.sh  verify_release.py  verify_release.sh
construction/: README.md
docs/: B1_EPOCH_SEAL.md  B2_SCHEMA_MIGRATION.md  B3_KEY_PROVENANCE.md  B4a_WRITER_SERIALIZATION.md  CAPABILITY_REGISTER.md  INVARIANT_TAXONOMY_GUIDE.md  RELEASE_CLOSURE_V0.1.0.md  SCHEMA_HASH_FRAME_PIN.md  index.md
tests/: README.md  cli_smoke.sh  run_fast.py  run_full.py
tools/: BATCHING_ANALYSIS.md  archive_hygiene_check.py  b1_conformance.py  b2_conformance.py  b3_conformance.py  b4a_conformance.py  b5a_conformance.py  capability_register_check.py  dep_graph.py  effect_declaration_probe.py  hygiene_check.py  import_side_effects.py  refusal_taxonomy.py  schema_hash_conformance.py
ugk/: ARCHITECTURE.md  LEGACY_RETIREMENT.md  RHO_SOUND_DOMAIN.md  __init__.py  _paths.py  a1_verifier.py  adr.py  amendment.py  amendment_ledger.json  authority_graph.py  authority_keys.py  authority_model.py  capabilities.py  capability_evidence.py  charter.py  cli.py  csh.py  decision.py  dimensions.py  freshness.py  gate_probe.py  implementation_codex.py  intent.py  invariants.py  kernel.py  (+12 more)
(+301 files in other folders)
